# libcloudstorage

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Doxyfile.in  Makefile.am  PRIVACY.md  README.md  appveyor.yml  configure.ac  libcloudstorage.pro
contrib/: bootstrap  bootstrap-android  bootstrap-ios  bootstrap-macos  bootstrap-win32  bootstrap-winrt  change-prefix.sh
contrib/patches/: cares-config-winrt-fix.patch  cares-gethostbyaddr-winrt-fix.patch  cares-gethostbyname-winrt-fix.patch  cares-init-winrt-fix.patch  cares-library-init-winrt-fix.patch  cryptlib-winrt-enable.patch  curl-openssl-no-ui.patch  ffmpeg-enable-dash-seeking.patch  kirigami-tint-transparent.patch  kirigami_qrc_in_fix.patch  mega-client-winrt-fix.patch  mega-cryptopp-h-winrt-fix.patch  mega-cryptopp-winrt-fix.patch  mega-enabled-winrt.patch  microhttpd-connection-winrt-fix.patch  microhttpd-enable-winrt.patch  microhttpd-memorypool-winrt-fix.patch  microhttpd-sockets-winrt-fix.patch  (+3 more)
examples/: CMakeLists.txt  Makefile.am  Makefile.in
examples/cloudbrowser/: Callback.cpp  Callback.h  CloudContext.cpp  CloudContext.h  Exec.cpp  Exec.h  File.cpp  File.h  FileDialog.cpp  FileDialog.h  GenerateThumbnail.cpp  GenerateThumbnail.h  InputDevice.cpp  InputDevice.h  Makefile.am  Makefile.in  MediaPlayer.cpp  MediaPlayer.h  MockProvider.cpp  MockProvider.h  Window.cpp  Window.h  main.cpp  main.qml  qml.qrc  resources.qrc
examples/cloudbrowser/android/: AndroidManifest.xml  Workaround.qml  cloudbrowser.pro
examples/cloudbrowser/android/src/org/videolan/cloudbrowser/: CloudBrowser.java
examples/cloudbrowser/qml/: ActionButton.qml  ActionTextButton.qml  FileDialog.qml  ItemPage.qml  MediaPlayer.qml  ProviderEntry.qml  QtPlayer.qml  RegisterPage.qml  RemoveProvider.qml  VlcPlayer.qml  WebView.qml  main.qml
examples/cloudbrowser/resources/: amazons3_login.html  amazons3_success.html  default_error.html  default_success.html  mega_login.html  mega_success.html  owncloud_login.html  owncloud_success.html  webdav_login.html  webdav_success.html
examples/commandlinebrowser/: CMakeLists.txt  Makefile.am  main.cpp
examples/promise/: CMakeLists.txt  CloudAccess.cpp  CloudAccess.h  CloudEventLoop.cpp  CloudEventLoop.h  CloudFactory.cpp  CloudFactory.h  ICloudAccess.h  ICloudFactory.h  LoginPage.cpp  LoginPage.h  Makefile.am  Promise.h  main.cpp
src/: Auth.cpp  Auth.h  CMakeLists.txt  CloudProvider.cpp  CloudProvider.h  CloudStorage.cpp  CloudStorage.h  Dropbox.cpp  Dropbox.h  GoogleDrive.cpp  GoogleDrive.h  HttpRequest.cpp  HttpRequest.h  IAuth.h  ICloudAccess.h  ICloudFactory.h  ICloudProvider.h  ICloudStorage.h  ICrypto.h  IFileSystem.h  IHttp.h  IHttpServer.h  IItem.h  IRequest.h  IThreadPool.h  IThumbnailer.h  Item.cpp  Item.h  Makefile.am  OneDrive.cpp  OneDrive.h  Request.cpp  Request.h  libcloudstorage.pc.in
src/C/: CloudProvider.cpp  CloudProvider.h  CloudStorage.cpp  CloudStorage.h  Crypto.cpp  Crypto.h  Http.cpp  Http.h  HttpServer.cpp  HttpServer.h  Item.cpp  Item.h  Request.cpp  Request.h  ThreadPool.cpp  ThreadPool.h
src/CloudProvider/: AmazonDrive.cpp  AmazonDrive.h  AmazonS3.cpp  AmazonS3.h  AnimeZone.cpp  AnimeZone.h  Box.cpp  Box.h  CloudProvider.cpp  CloudProvider.h  Dropbox.cpp  Dropbox.h  FourShared.cpp  FourShared.h  GoogleDrive.cpp  GoogleDrive.h  GooglePhotos.cpp  GooglePhotos.h  HubiC.cpp  HubiC.h  LocalDrive.cpp  LocalDrive.h  LocalDriveWinRT.cpp  LocalDriveWinRT.h  MegaNz.cpp  MegaNz.h  OneDrive.cpp  OneDrive.h  OwnCloud.cpp  OwnCloud.h  PCloud.cpp  PCloud.h  WebDav.cpp  WebDav.h  YandexDisk.cpp  YandexDisk.h  YouTube.cpp  YouTube.h
src/Request/: AuthorizeRequest.cpp  AuthorizeRequest.h  CreateDirectoryRequest.cpp  CreateDirectoryRequest.h  DeleteItemRequest.cpp  DeleteItemRequest.h  DownloadFileRequest.cpp  DownloadFileRequest.h  ExchangeCodeRequest.cpp  ExchangeCodeRequest.h  GetItemDataRequest.cpp  GetItemDataRequest.h  GetItemRequest.cpp  GetItemRequest.h  GetItemUrlRequest.cpp  GetItemUrlRequest.h  HttpCallback.cpp  HttpCallback.h  ListDirectoryPageRequest.cpp  ListDirectoryPageRequest.h  ListDirectoryRequest.cpp  ListDirectoryRequest.h  MoveItemRequest.cpp  MoveItemRequest.h  RecursiveRequest.cpp  RecursiveRequest.h  RenameItemRequest.cpp  RenameItemRequest.h  Request.cpp  Request.h  UploadFileRequest.cpp  UploadFileRequest.h
src/Utility/: Async.h  Auth.cpp  Auth.h  CloudAccess.cpp  CloudAccess.h  CloudEventLoop.cpp  CloudEventLoop.h  CloudFactory.cpp  CloudFactory.h  CloudStorage.cpp  CloudStorage.h  CryptoPP.cpp  CryptoPP.h  CurlHttp.cpp  CurlHttp.h  FFmpegThumbnailer.cpp  FFmpegThumbnailer.h  FileServer.cpp  FileServer.h  FileSystem.cpp  FileSystem.h  GenerateLoginPage.sh  GenerateThumbnail.cpp  GenerateThumbnail.h  HttpRequest.cpp  HttpRequest.h  HttpServer.cpp  Item.cpp  Item.h  JQuery.h  LoginPage.cpp  MicroHttpdServer.cpp  MicroHttpdServer.h  Promise.h  ThreadPool.cpp  ThreadPool.h  Thumbnailer.cpp  Thumbnailer.h  UrlJS.h  Utility.cpp  (+1 more)
test/: CMakeLists.txt  Makefile.am  main.cpp
test/CloudProvider/: AmazonS3Test.cpp  BoxTest.cpp  CloudProviderTest.cpp  DropboxTest.cpp  FourSharedTest.cpp  GoogleDriveTest.cpp  GooglePhotosTest.cpp  HubiCTest.cpp  MegaNzTest.cpp  OneDriveTest.cpp  PCloudTest.cpp  WebDavTest.cpp  YandexDiskTest.cpp
test/Utility/: AuthMock.h  CloudFactoryMock.cpp  CloudFactoryMock.h  CloudProviderMock.cpp  CloudProviderMock.h  HttpMock.cpp  HttpMock.h  HttpServerMock.h  RequestTest.cpp  ThreadPoolMock.h
test/data/: mega_files_new_account_response.json  mega_files_response.json  mega_login_new_account_response.json  mega_login_response.json  mega_login_secondary_response.json  mega_token.txt
tools/: CMakeLists.txt
win32/: Package.appxmanifest  cloudbrowser-winrt.vcxproj  cloudbrowser-winrt.vcxproj.filters  cloudbrowser.vcxproj  cloudbrowser.vcxproj.filters  cloudstorage.sln  libcloudbrowser-winrt.vcxproj  libcloudbrowser-winrt.vcxproj.filters  libcloudbrowser.vcxproj  libcloudbrowser.vcxproj.filters  libcloudstorage-winrt.vcxproj  libcloudstorage-winrt.vcxproj.filters  libcloudstorage.vcxproj  qt.conf
(+34 files in other folders)
